--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "Damian Aramayo",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^20.14.9",
     "@types/redis": "^4.0.11",
     "nodemon": "^3.1.4",
@@ -19,7 +23,15 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
+    "express-session": "^1.18.0",
+    "moment": "^2.30.1",
     "redis": "^4.6.15",
     "winston": "^3.13.0"
   }
